2009-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcl.c: Major improvements from John Sergeant.  These
	include: 1) Fixed 2 bit output where Max=BLACK - this always
	produced negative images even when -negate was passed as a
	parameter. The code now uses a two element palette to handle this
	situation.  2) Added support for 8 bit pseudoclass images.  3)
	Changed the coder to allow adjoin, placing each sub-image on a new
	page.  4) Added support for compression. Any compression other
	than "None" will cause the coder to to try to calculate and pick
	the best out of the PCL set of RLE, Tiff RLE or delta compression
	on a per row basis, as well as handling repeated rows and zero
	rows intelligently.

2009-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am (MAGICKPROGRAMS): Add a 'compare'
	ImageMagick compatibility link.

	* INSTALL-unix.txt: Apply patch regarding GnuWin32 from John Wye,
	SourceForge #2779009.

2009-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add the LDFLAGS option -Wl,-zlazyload when using
	the Solaris linker.

2009-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/url.c (ReadURLImage): Fix typos.

2009-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (SystemCommand): Added access confirmation
	checks for external commands.

	* magick/unix_port.c (MagickSpawnVP): Added access confirmation
	checks for external commands.

	* coders/url.c (ReadURLImage): Added access confirmation checks
	for URLs.

	* magick/blob.c: Added access confirmation checks for files.

	* magick/confirm_access.c (MagickConfirmAccess): Added an access
	confirmation facility to allow the API user to monitor and/or
	block access to files and URLs.  This allows the API user to
	implement a security policy based on actual accesses.

2009-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.35.

	* lcms: Updated lcms to 1.18a.
