@@ -24,6 +24,8 @@
 2009-05-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> www/perl.rst: Add missing PerlMagick debug event types.
+
   <LI> coders/pcl.c: Major improvements from John Sergeant.  These
         include: 1) Fixed 2 bit output where Max=BLACK - this always
         produced negative images even when -negate was passed as a
