@@ -1073,11 +1073,15 @@ compression</td>
 </tr>
 <tr><td>debug</td>
 <td>{No, Configure, Annotate, Render,
-Locale, Coder, X11, Cache, Blob,
-All}</td>
-<td>display copious
+Transform, Locale, Coder, X11,
+Cache, Blob, Deprecate, User,
+Resource, TemporaryFile,
+Exception,All}</td>
+<td>log copious
 debugging
-information</td>
+information  for
+one or more event
+types</td>
 </tr>
 <tr><td>delay</td>
 <td>integer</td>
@@ -2027,7 +2031,7 @@ die &quot;unable to continue&quot; if ($1 == ResourceLimitError);
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-03-26 21:43 UTC.
+Generated on: 2009-05-12 03:57 UTC.
 
 </div>
 </body>
