@@ -1,5 +1,7 @@
 2009-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* www/perl.rst: Add missing PerlMagick debug event types.
+
 	* coders/pcl.c: Major improvements from John Sergeant.  These
 	include: 1) Fixed 2 bit output where Max=BLACK - this always
 	produced negative images even when -negate was passed as a
